--- a/styles.css
+++ b/styles.css
@@ -24,15 +24,19 @@
   }
 
  body {
-    /* background-image: url('images/1.jpg'); */
-    background-size: cover;
+    background-image: url('ababeel-logo.jpg');
+    background-position-x: center;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    background-size: 10em 10em;
     display: grid;
     grid-template-columns: 10% 80% 10%;
-    justify-content: start;
+    grid-template-rows: auto auto auto auto auto;
+    justify-content: middle;
     padding: 0;
     margin: 0;
     margin-bottom: 4em;
-    font-size: 1.5em;
+    font-size: 1.5vh;
     font-family: "Arial";
 
 }
@@ -42,9 +46,11 @@ body>header {
     grid-area: 1/1/2/4;
     background-image: linear-gradient(to bottom, rgb(1, 167, 117), rgba(225, 231, 231, 0.774));
     height: min-content;
+    width:100%;
     padding: 0;
     margin: 0;
     box-shadow: 2px 2px 2px 2px rgba(37, 37, 37, 0.25);
+    position: fixed;
 }
 
 body>header>img {
@@ -58,27 +64,26 @@ body>header>img {
 }
 
 body>header>h1 {
-    grid-area: 1/2/4/4;
     margin: auto;
     margin-left: 3em;
     padding: 0.4em;
-    font-family: serif;
     color: rgb(42, 43, 43);
 
 
 }
 
 body>nav {
-    grid-area: 2/1/3/2;
+    grid-area: 2/1/2/2;
     margin: 0;
     padding-top: 14em;
     padding-bottom: 14em;
+    position: relative;
 }
 
 body>nav>ul {
     list-style: none;
     display: flex;
-    grid-template-columns: auto auto auto;
+    /* grid-template-columns: auto auto auto; */
     height: 100%;
     width: 3.75em;
     flex-direction: column;
@@ -117,10 +122,10 @@ body>section {
     text-align: center;
     overflow-Y: scroll;
     overflow-X: hidden;
+    position: relative;
 }
 
 body>section>header {
-    font-family: Arial, Helvetica, sans-serif;
     padding: 25px;
     text-align: start;
 }
@@ -139,15 +144,14 @@ body>section>article {
     padding: 0%;
     margin: 1%;
     background-color: rgb(22, 189, 16);
-    font-family: 'Times New Roman', Times, serif;
-    font-size: large;
-    font-weight: normal;
     color: rgb(241, 227, 227);
+    position: fixed;
 }
 
 .fButton {
 
     text-align: center;
+    position: fixed;
     grid-area: 3/2/4/3;
     padding: 0;
     width: 100%;
@@ -158,7 +162,9 @@ body>section>article {
 }
 
 .articleDisplay {
-    display: none
+    display: none;
+    position: fixed;
+    
 }
 
 #pageF {
