--- a/styles.css
+++ b/styles.css
@@ -136,12 +136,13 @@ body>section>header {
 
 body>section>article {
     text-align: start;
-    width: fit-content;
+    width: 100%;
     min-height: fit-content;
     padding: 1em;
+    padding-left: auto;
+    padding-right: auto;
     margin-bottom: 1em;
     background-color: rgba(250, 250, 250, 0.7);
-    
     position: relative;
     overflow-Y: visible;
     overflow-X:auto ;
